# DentalAI

./: .clang-format  .gitignore  .gitlab-ci-docs.md  .gitlab-ci.yml  .setup_summary.txt  CICD_README.md  CI_CD_QUICKSTART.md  CI_CD_SETUP_SUMMARY.md  CMakeLists.txt  Dockerfile.ci  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  SETUP_COMPLETE.md  SOLUTION_B_ROADMAP.md  TASK_MANAGEMENT.md  THIRD_PARTY_SETUP.md  build.sh
models/: README.md
python/: .gitignore  PROJECT_OVERVIEW.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  example_usage.py  requirements.txt  setup.py
python/ai_algorithms/: __init__.py
python/ai_algorithms/models/: __init__.py  base_model.py
python/ai_algorithms/testing/: __init__.py  evaluator.py  metrics.py
python/ai_algorithms/training/: __init__.py  config.py  trainer.py
python/ai_algorithms/utils/: __init__.py  config_parser.py  logger.py  visualization.py
python/classification/: README.md
python/common/: __init__.py  base_trainer.py  metrics.py  utils.py
python/gingiva/: README.md
python/landmarks/: README.md  __init__.py  config.yaml  dataset.py  model.py  train.py
python/reconstruction/: README.md
python/root_simulation/: README.md
python/segmentation/: README.md  __init__.py  config.yaml  dataset.py  inference.py  model.py  train.py
python/tooth_axis/: README.md  __init__.py  config.yaml  dataset.py  model.py  train.py
scripts/: generate_all_modules.sh  generate_remaining_files.sh  test_ci_locally.sh
src/analysis/: CMakeLists.txt  angle_classification.cc  angle_classification.h  arch_curve_analysis.cc  arch_curve_analysis.h  gingiva_animation.cc  gingiva_animation.h  ipr_simulation.cc  ipr_simulation.h  landmark_detection.cc  landmark_detection.h  overjet_overbite_analysis.cc  overjet_overbite_analysis.h  spee_curve_analysis.cc  spee_curve_analysis.h
src/common/: CMakeLists.txt  geometry_utils.cc  geometry_utils.h  mesh_utils.cc  mesh_utils.h  types.cc  types.h
src/output/: CMakeLists.txt  mesh_exporter.cc  mesh_exporter.h  mesh_with_gingiva_exporter.cc  mesh_with_gingiva_exporter.h
src/preprocessing/: CMakeLists.txt  auto_adjust_plane.cc  auto_adjust_plane.h  bubble_repair.cc  bubble_repair.h  depression_repair.cc  depression_repair.h  flying_edge_removal.cc  flying_edge_removal.h  manual_adjust_plane.cc  manual_adjust_plane.h
src/reconstruction/: CMakeLists.txt  auto_proximal_reconstruction.cc  auto_proximal_reconstruction.h  auto_tooth_axis.cc  auto_tooth_axis.h  crown_repair.cc  crown_repair.h  manual_proximal_reconstruction.cc  manual_proximal_reconstruction.h  manual_tooth_axis.cc  manual_tooth_axis.h  root_simulation.cc  root_simulation.h  virtual_gingiva_reconstruction.cc  virtual_gingiva_reconstruction.h
src/segmentation/: CMakeLists.txt  auto_tooth_numbering.cc  auto_tooth_numbering.h  auto_tooth_segmentation.cc  auto_tooth_segmentation.h  gingival_margin_drawing.cc  gingival_margin_drawing.h  landmark_marking.cc  landmark_marking.h  proximal_surface_segmentation.cc  proximal_surface_segmentation.h  tooth_contour_editing.cc  tooth_contour_editing.h  tooth_numbering.cc  tooth_numbering.h
tests/: CMakeLists.txt  test_geometry_utils.cc  test_main.cc  test_mesh_utils.cc  test_preprocessing.cc  test_segmentation.cc
